// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connected 1`] = `
<AddSourceWizardStepThree
  add={false}
  credentials={Array []}
  dispatch={[Function]}
  error={true}
  errorMessage="Lorem ipsum"
  fulfilled={false}
  name={null}
  pending={false}
/>
`;

exports[`error created 1`] = `
<AddSourceWizardStepThree
  add={true}
  error={true}
  errorMessage="lorem ipsum"
  fulfilled={false}
  name={null}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="error-circle-o"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="error-circle-o"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-error-circle-o"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      Error 
      Creating
       Source
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      There are errors on the previous step
    </p>
  </div>
</AddSourceWizardStepThree>
`;

exports[`error updated 1`] = `
<AddSourceWizardStepThree
  add={false}
  error={true}
  errorMessage="lorem ipsum"
  fulfilled={false}
  name={null}
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="error-circle-o"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="error-circle-o"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-error-circle-o"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      Error 
      Updating
       Source
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      There are errors on the previous step
    </p>
  </div>
</AddSourceWizardStepThree>
`;

exports[`fulfilled created 1`] = `
<AddSourceWizardStepThree
  add={true}
  error={false}
  fulfilled={true}
  name="Dolor"
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="ok"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="ok"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-ok"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      <strong>
        Dolor
      </strong>
       was 
      created
      .
    </h3>
  </div>
</AddSourceWizardStepThree>
`;

exports[`fulfilled updated 1`] = `
<AddSourceWizardStepThree
  add={false}
  error={false}
  fulfilled={true}
  name="Dolor"
  pending={false}
>
  <div
    className="wizard-pf-complete blank-slate-pf"
  >
    <div
      className="wizard-pf-success-icon"
    >
      <Icon
        name="ok"
        type="pf"
      >
        <PatternflyIcon
          className=""
          name="ok"
        >
          <span
            aria-hidden="true"
            className="pficon pficon-ok"
          />
        </PatternflyIcon>
      </Icon>
    </div>
    <h3
      className="blank-slate-pf-main-action"
    >
      <strong>
        Dolor
      </strong>
       was 
      updated
      .
    </h3>
  </div>
</AddSourceWizardStepThree>
`;

exports[`pending created 1`] = `
<AddSourceWizardStepThree
  add={true}
  error={false}
  fulfilled={false}
  name="Dolor"
  pending={true}
>
  <div
    className="wizard-pf-process blank-slate-pf"
  >
    <Spinner
      className="blank-slate-pf-icon"
      inline={false}
      inverse={false}
      loading={true}
      size="lg"
    >
      <div
        className="blank-slate-pf-icon spinner spinner-lg"
      />
    </Spinner>
    <h3
      className="blank-slate-pf-main-action"
    >
      Creating
       Source...
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      Please wait while source 
      <strong>
        Dolor
      </strong>
       is being 
      created
      .
    </p>
  </div>
</AddSourceWizardStepThree>
`;

exports[`pending updated 1`] = `
<AddSourceWizardStepThree
  add={false}
  error={false}
  fulfilled={false}
  name="Dolor"
  pending={true}
>
  <div
    className="wizard-pf-process blank-slate-pf"
  >
    <Spinner
      className="blank-slate-pf-icon"
      inline={false}
      inverse={false}
      loading={true}
      size="lg"
    >
      <div
        className="blank-slate-pf-icon spinner spinner-lg"
      />
    </Spinner>
    <h3
      className="blank-slate-pf-main-action"
    >
      Updating
       Source...
    </h3>
    <p
      className="blank-slate-pf-secondary-action"
    >
      Please wait while source 
      <strong>
        Dolor
      </strong>
       is being 
      updated
      .
    </p>
  </div>
</AddSourceWizardStepThree>
`;
